fix(all): BPI subscores and other bug/trans fixes
Closes #43

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -110,6 +110,8 @@
         "total": "Total Score",
         "pain": "Pain",
         "interference": "Interference",
+        "activityInterference": "Activity Interference",
+        "affectiveInterference": "Affective Interference",
         "sub": "Subtotal Score",
         "risk": "Risk",
         "work": "Work",
@@ -198,16 +200,6 @@
     "commorbidityRheumatoidArthritis": "Rheumatoid arthritis",
     "redFlags": "Red flags",
     "relevantScores": "Relevant scores",
-    "scores": {
-      "pain": "Pain",
-      "interference": "Interference",
-      "total": "Total",
-      "sub": "Subtotal",
-      "risk": "Risk",
-      "disability/symptom": "Disability/symptom",
-      "work": "Work",
-      "sport": "Sport"
-    },
     "healthQuality": "Perceived health quality",
     "qualityOfLife": "Perceived quality of life",
     "healthSatisfaction": "Perceived health satisfaction",
