--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -156,6 +156,7 @@
     "genderOther": "Specify your gender"
   },
   "forgot": {
+    "link": "Forgot password?",
     "newPassword": "Enter your new password",
     "reset": "Enter your email associated with your account",
     "directions": "A link will be sent to your email"
