feat(client): basic email confirmation for new ip (2fa)

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -22,7 +22,8 @@
       "title": "Sign into the application",
       "email": "Email",
       "password": "Password",
-      "submit": "Submit"
+      "submit": "Submit",
+      "emailCode": "Enter the verification code sent to your email"
     }
   },
   "patient": {
