--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -277,5 +277,15 @@
     "ageTitle": "Nombre de patients selon catégorie d'âge (en années)",
     "ageTableTitle": "Age (en années)",
     "genderTitle": "Nombre de patients selon le sexe"
+  },
+  "alert": {
+    "forgotSent": "Un lien de réinitialisation de mot de passe a été envoyé à votre adresse e-mail",
+    "reset": "Votre mot de passe a été réinitialisé avec succès",
+    "alreadySent": "Un code de vérification vous a déjà été envoyé par e-mail",
+    "emailSent": "Un code de vérification vous a été envoyé par e-mail",
+    "wrongCode": "Code de vérification incorrect",
+    "invitationSent": "Invitation envoyée à :",
+    "updatedSuccessfully": "Mise à jour réussie",
+    "questionnaireFilled": "Questionnaire rempli et envoyé avec succès"
   }
 }
