feat(all): questionnaire score calculator update
Closes #56

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -118,7 +118,24 @@
         "work": "Work",
         "sport": "Sport",
         "disability/symptom": "Disability/Symptom",
-        "globalImpressionOfChange": "Global Impression of Change"
+        "globalImpressionOfChange": "Global Impression of Change",
+        "worstPain": "Worst Pain",
+        "averagePain": "Average Pain",
+        "interferenceInterpretation": "Interference Interpretation",
+        "activityInterferenceInterpretation": "Activity Interference Interpretation",
+        "affectiveInterferenceInterpretation": "Affective Interference Interpretation",
+        "interpretation": "Interpretation",
+        "noDisability": "No Disability",
+        "mildDisability": "Mild Disability",
+        "moderateDisability": "Moderate Disability",
+        "severeDisability": "Severe Disability",
+        "completeDisability": "Complete Disability",
+        "lowInterference": "Low Interference",
+        "moderateInterference": "Moderate Interference",
+        "severeInterference": "Severe Interference",
+        "low": "Low",
+        "medium": "Medium",
+        "high": "High"
       },
       "reports": "Reports",
       "newReport": "New report"
