feat(client): translation

--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -118,7 +118,24 @@
         "work": "Travail",
         "sport": "Sport",
         "disability/symptom": "Incapacité/Symptôme",
-        "globalImpressionOfChange": "Impression globale de changement"
+        "globalImpressionOfChange": "Impression globale de changement",
+        "worstPain": "Pire douleur",
+        "averagePain": "Douleur moyenne",
+        "interferenceInterpretation": "Interprétation des interférences",
+        "activityInterferenceInterpretation": "Interprétation des interférences d'activité",
+        "affectiveInterferenceInterpretation": "Interprétation des interférences affectives",
+        "interprétation": "Interprétation",
+        "noDisability": "Pas d'incapacité",
+        "mildDisability": "Incapacité légère",
+        "moderateDisability": "Incapacité modérée",
+        "severeDisability": "Incapacité sévère",
+        "completeDisability": "Complète Incapacité",
+        "lowInterference": "Faible interférence",
+        "moderateInterference": "Interférence modérée",
+        "severeInterference": "Interférence sévère",
+        "low": "Bas",
+        "medium": "Moyen",
+        "high": "Haut"
       },
       "reports": "Rapports",
       "newReport": "Nouveau Rapport"
