feat(client): privacy and terms

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -166,7 +166,7 @@
     "email": "Email",
     "password": "Password",
     "passwordConfirmation": "Confirm your password",
-    "consent": "I consent to this",
+    "consent": "I have read and agree to the",
     "submit": "Submit",
     "male": "Male",
     "female": "Female",
