--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -166,7 +166,7 @@
     "email": "Courriel",
     "password": "Mot de passe",
     "passwordConfirmation": "Confirmez votre mot de passe",
-    "consent": "Je consent a cela",
+    "consent": "J'ai lu et accepté les",
     "submit": "Soumettre",
     "male": "Homme",
     "female": "Femme",
