--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -165,6 +165,8 @@
     "dob": "Date of Birth",
     "email": "Email",
     "password": "Password",
+    "passwordRequirements": "Minimum eight characters, at least one uppercase letter, one lowercase letter, one number and one special character",
+    "invalidPassword": "Insecure password",
     "passwordConfirmation": "Confirm your password",
     "consent": "I have read and agree to the",
     "submit": "Submit",
