--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -165,6 +165,8 @@
     "dob": "Date de Naissance",
     "email": "Courriel",
     "password": "Mot de passe",
+    "invalidPassword": "Mot de passe non sécurisé",
+    "passwordRequirements": "Minimum huit caractères, au moins une lettre majuscule, une lettre minuscule, un chiffre et un caractère spécial",
     "passwordConfirmation": "Confirmez votre mot de passe",
     "consent": "J'ai lu et accepté les",
     "submit": "Soumettre",
