--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -167,6 +167,7 @@
     "password": "Password",
     "passwordRequirements": "Minimum eight characters, at least one uppercase letter, one lowercase letter, one number and one special character",
     "invalidPassword": "Insecure password",
+    "pwnedPassword": "This password has been exposed in a data breach. Therefore, it cannot be used in this application.",
     "passwordConfirmation": "Confirm your password",
     "consent": "I have read and agree to the",
     "submit": "Submit",
