--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -167,6 +167,7 @@
     "password": "Mot de passe",
     "invalidPassword": "Mot de passe non sécurisé",
     "passwordRequirements": "Minimum huit caractères, au moins une lettre majuscule, une lettre minuscule, un chiffre et un caractère spécial",
+    "pwnedPassword": "Ce mot de passe a été exposé dans une fuite de données. Par conséquent, il ne peut pas être utilisé dans cette application.",
     "passwordConfirmation": "Confirmez votre mot de passe",
     "consent": "J'ai lu et accepté les",
     "submit": "Soumettre",
