feat(client): updated ui for new report

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -222,7 +222,7 @@
     "commorbidityOsteoarthritis": "Osteoarthritis, degenerative arthritis",
     "commorbidityRheumatoidArthritis": "Rheumatoid arthritis",
     "redFlags": "Red flags",
-    "relevantScores": "Relevant scores",
+    "relevantScores": "Patient reported outcome measures",
     "healthQuality": "Perceived health quality",
     "qualityOfLife": "Perceived quality of life",
     "healthSatisfaction": "Perceived health satisfaction",
@@ -230,8 +230,8 @@
     "gecFunction": "Global expectation of change (Function)",
     "gecQualityOfLife": "Global expectation of change (Quality of life)",
     "comments": "Comments",
-    "diagnosis": "Diagnosis",
-    "additionalDiagnosis": "Additional diagnosis",
+    "diagnosis": "Diagnosis: Chief complaint",
+    "additionalDiagnosis": "Diagnosis: Secondary complaint(s)",
     "nbTx": "Number of treatments",
     "frequency": "Treatment frequency",
     "intensive": "Intensive",
