--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -222,7 +222,7 @@
     "commorbidityOsteoarthritis": "Ostéoarthrite, arthrite dégénérative",
     "commorbidityRheumatoidArthritis": "Arthrite rhumatoïde",
     "redFlags": "Drapeaux rouges",
-    "relevantScores": "Pointages utiles",
+    "relevantScores": "Mesures des résultats rapportés par le patient",
     "healthQuality": "Qualité de santé perçue",
     "qualityOfLife": "Qualité de vie perçue",
     "healthSatisfaction": "Satisfaction de la santé perçue",
@@ -230,8 +230,8 @@
     "gecFunction": "Attentes globales de changement (Fonction)",
     "gecQualityOfLife": "Attentes globales de changement (Qualité de vie)",
     "comments": "Commentaires",
-    "diagnosis": "Diagnostique",
-    "additionalDiagnosis": "Diagnostiques supplémentaires",
+    "diagnosis": "Diagnostic: Motif principal de consultation",
+    "additionalDiagnosis": "Diagnostic: Motif(s) secondaire(s) de consultation",
     "nbTx": "Nombre de traitements",
     "frequency": "Fréquence des traitements",
     "intensive": "Intensifs",
