feat(client): display both report types list

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -139,7 +139,10 @@
       },
       "reports": "Reports",
       "newReport": "New report",
-      "newReEvaluationReport": "New Re-Evaluation Report"
+      "newReEvaluationReport": "New Re-Evaluation Report",
+      "type": "Type",
+      "initial": "Initial",
+      "reEvaluation": "Re-evaluation"
     }
   },
   "sidebar": {
