feat(client): re evaluation report view

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -309,7 +309,9 @@
     "initialGlobalExpectationOfClinicalChange": "Initial report’s Global Expectation of Clinical change",
     "chiefComplaintInitialDiagnosis": "Chief complaint initial diagnosis",
     "secondaryComplaintInitialDiagnosis": "Secondary complaint diagnosis",
-    "scoreImprovement": "Improvement"
+    "scoreImprovement": "Improvement",
+    "reEvaluationReport": "Re-Evaluation Report",
+    "report": "Report"
   },
   "metrics": {
     "title": "Your metrics",
