feat(client): style of new report

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -313,7 +313,9 @@
     "reEvaluationReport": "Re-Evaluation Report",
     "report": "Report",
     "filledProfessional": "Filled by the professional",
-    "comorbidities": "Comorbidities"
+    "comorbidities": "Comorbidities",
+    "diagnosisTitle": "Diagnosis",
+    "prognosis": "Prognosis"
   },
   "metrics": {
     "title": "Your metrics",
