feat(client): re evaluation form ui update

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -318,7 +318,8 @@
     "prognosis": "Prognosis",
     "patientData": "Patient Data",
     "about": "About this report",
-    "demographics": "Demographics"
+    "demographics": "Demographics",
+    "complaint": "Complaint"
   },
   "metrics": {
     "title": "Your metrics",
