feat(all): report modifications

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -234,21 +234,22 @@
     "gecPain": "Global expectation of change (Pain)",
     "gecFunction": "Global expectation of change (Function)",
     "gecQualityOfLife": "Global expectation of change (Quality of life)",
-    "comments": "Comments",
-    "diagnosis": "Diagnosis: Chief complaint",
-    "additionalDiagnosis": "Diagnosis: Secondary complaint(s)",
+    "differentialDiagnosis": "Differential diagnosis",
+    "diagnosis": "Diagnosis of Chief complaint",
+    "additionalDiagnosis": "Secondary complaint(s) Diagnoses",
     "nbTx": "Number of treatments",
     "frequency": "Treatment frequency",
     "intensive": "Intensive",
     "periodic": "Periodic",
     "prn": "PRN",
-    "objectives": "Objective(s)",
-    "painRelieving": "Pain relieving",
-    "improveFunction": "Improve function",
-    "readaptation": "Readaptation",
-    "maintenance": "Maintenance",
-    "prevention": "Prevention",
-    "therapeuticTrial": "Therapeutic trial",
+    "objectives": {
+      "title": "Objective(s)",
+      "curativeCare": "Curative Care",
+      "rehabilitativeCare": "Rehabilitative care",
+      "maintenanceCare": "Maintenance care",
+      "primaryPrevention": "Primary prevention & Wellness"
+    },
+
     "planOfManagement": "Plan of Management",
     "techniques": {
       "diversified": "Diversified",
@@ -292,7 +293,6 @@
       "other": "Other"
     },
     "other": "Other (separate by comma)",
-    "externalConsultation": "External Consultation",
     "gecc": "Global Expectation Of Clinical Change",
     "none": "None",
     "improvement": "Improvement reported by patient",
@@ -314,12 +314,55 @@
     "report": "Report",
     "filledProfessional": "Filled by the professional",
     "comorbidities": "Comorbidities",
-    "diagnosisTitle": "Diagnosis",
+    "diagnosisTitle": "Diagnosis & Clinical impression",
+    "currentEpisode": "Current episode of care",
     "prognosis": "Prognosis",
     "patientData": "Patient Data",
     "about": "About this report",
     "demographics": "Demographics",
-    "complaint": "Complaint"
+    "complaint": "Complaint",
+    "dob": "Date of Birth",
+    "allPainAreas": "All Pain Areas",
+    "relatedPainAreas": "Related Pain Areas",
+    "findings": "Relevant objective findings",
+    "investigationResults": "Relevant objective clinical findings and imaging/ investigation results",
+    "additionalInvestigation": "Additional investigation has been requested or planned",
+    "specify": "Specify",
+    "yes": "Yes",
+    "no": "No",
+    "neckOrLowerBackCondition": "Is the chief complaint is attributable to a neck or lower back condition?",
+    "spinalDiagnosticClassification": {
+      "title": "Spinal diagnostic classification for chief complaint",
+      "grade1-2": "Non-specific / Mechanical / Grade 1-2 Neck Pain",
+      "grade3": "Grade 3 Neck pain / with radiculopathy",
+      "lowBackPainNonSpecific": "Non specific / mechanical Low Back Pain",
+      "sciatica": "Low back pain with radiculopathy / sciatica"
+    },
+    "activityRecommendation": "Activity Recommendation",
+    "currentEmploymentStatus": "Current Employment Status",
+    "continueActivities": "Continue activities of daily living (ADL)",
+    "functionalLimitation": "Functional limitation or restriction",
+    "reference": {
+      "title": "Reference  & inter-professional collaboration",
+      "no": "No",
+      "emergency": "Yes - Emergency",
+      "urgent": "Yes - Urgent",
+      "soon": "Yes - Soon",
+      "to": "To",
+      "acupuncture": "Acupuncture",
+      "chiropractic": "Chiropractic",
+      "exerciseTherapy": "Exercise therapy",
+      "emergencyRoom": "Emergency",
+      "medecine": "Medicine",
+      "nutrition": "Nutrition",
+      "occupationalTherapy": "Occupational therapy",
+      "pharmacy": "Pharmacy",
+      "physicalTherapy": "Physical therapy",
+      "podiatry": "Podiatry",
+      "psychology": "Psychology",
+      "other": "Other",
+      "reason": "Reason for consultation request"
+    }
   },
   "metrics": {
     "title": "Your metrics",
