--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -234,21 +234,21 @@
     "gecPain": "Attentes globales de changement (Douleur)",
     "gecFunction": "Attentes globales de changement (Fonction)",
     "gecQualityOfLife": "Attentes globales de changement (Qualité de vie)",
-    "comments": "Commentaires",
-    "diagnosis": "Diagnostic: Motif principal de consultation",
-    "additionalDiagnosis": "Diagnostic: Motif(s) secondaire(s) de consultation",
+    "differentialDiagnosis": "Diagnostic différentiel",
+    "diagnosis": "Diagnostic du Motif principal de consultation",
+    "additionalDiagnosis": "Diagnostic(s) des Motif(s) secondaire(s) de consultation",
     "nbTx": "Nombre de traitements",
     "frequency": "Fréquence des traitements",
     "intensive": "Intensifs",
     "periodic": "Périodiques",
     "prn": "PRN",
-    "objectives": "Objectif(s)",
-    "painRelieving": "Soulagement de la douleur",
-    "improveFunction": "Améliorer les capacités",
-    "readaptation": "Réadaptation",
-    "maintenance": "Maintenance",
-    "prevention": "Prévention",
-    "therapeuticTrial": "Essai thérapeutique",
+    "objectives": {
+      "title": "Objectif(s)",
+      "curativeCare": "Soins curatifs",
+      "rehabilitativeCare": "Soins de réadaptation",
+      "maintenanceCare": "Soins de maintien",
+      "primaryPrevention": "Prévention primaire et bien-être"
+    },
     "planOfManagement": "Plan de soins",
     "techniques": {
       "diversified": "Diversified",
@@ -292,7 +292,6 @@
       "other": "Other"
     },
     "other": "Autres (séparés par des virgules)",
-    "externalConsultation": "Consultation externe",
     "gecc": "Attentes globales de changement clinique",
     "none": "Aucun",
     "improvement": "Amélioration rapportée par le patient",
@@ -314,12 +313,55 @@
     "report": "Rapport",
     "filledProfessional": "Rempli par le professionnel",
     "comorbidities": "Comorbidités",
-    "diagnosisTitle": "Diagnostic",
+    "diagnosisTitle": "Diagnostic & impression clinique",
+    "currentEpisode": "Épisode actuel de soins",
     "prognosis": "Prognostic",
     "patientData": "Données patient",
     "about": "À propos de ce rapport",
     "demographics": "Données démographiques",
-    "complaint": "Problème"
+    "complaint": "Problème",
+    "dob": "Date de Naissance",
+    "allPainAreas": "Toutes les zones douloureuses",
+    "relatedPainAreas": "Zones douloureuses associées au motif de consultation principal",
+    "findings": "Relevant objective findings",
+    "investigationResults": "Données cliniques objective et résultats d’imagerie(s)/ d’investigation(s) concordants",
+    "additionalInvestigation": "Investigation complémentaire demandée ou prévue",
+    "specify": "Préciser",
+    "yes": "Oui",
+    "no": "Non",
+    "neckOrLowerBackCondition": "Le motif de consultation principal est-il attribuable à une condition du cou ou du bas du dos?",
+    "spinalDiagnosticClassification": {
+      "title": "Classification diagnostique de la condition vertébrale liée au motif principal de consultation",
+      "grade1-2": "Cervicalgie de grade 1-2 / non-spécifique / d’origine mécanique",
+      "grade3": "Cervicalgie de grade 3 /avec radiculopathie",
+      "lowBackPainNonSpecific": "Lombalgie non-spécifique/ d’origine mécanique",
+      "sciatica": "Lombalgie avec radiculopathie / sciatalgie"
+    },
+    "activityRecommendation": "Recommendation d'Activité",
+    "currentEmploymentStatus": "Current Employment Status",
+    "continueActivities": "Maintien des activité de la vie quotidienne(AVQ)",
+    "functionalLimitation": "Limitation ou restriction fonctionnelle",
+    "reference": {
+      "title": "Demande de consultation & collaboration interprofessionnelle",
+      "no": "Non",
+      "emergency": "Oui - Très urgent",
+      "urgent": "Oui - Urgent",
+      "soon": "Oui - Bientôt",
+      "to": "À",
+      "acupuncture": "Acupuncture",
+      "chiropractic": "Chiropratique",
+      "exerciseTherapy": "Kinesiologie",
+      "emergencyRoom": "Emergency",
+      "medecine": "Médecine",
+      "nutrition": "Nutrition",
+      "occupationalTherapy": "Ergothérapie",
+      "pharmacy": "Pharmacie",
+      "physicalTherapy": "Physiothérapie",
+      "podiatry": "Podiatry",
+      "psychology": "Psychologie",
+      "other": "Autre",
+      "reason": "Motif pour la demande de consultation"
+    }
   },
   "metrics": {
     "title": "Vos statistiques",
