--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -361,7 +361,8 @@
       "psychology": "Psychologie",
       "other": "Autre",
       "reason": "Motif pour la demande de consultation"
-    }
+    },
+    "maximalMedicalImprovement": "Consolidation"
   },
   "metrics": {
     "title": "Vos statistiques",
